--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+
+* * * PRESENTATION  * * *
+
+This project accompanies this presentation:
+
+https://docs.google.com/present/edit?id=0AdO9pIGZsCr5ZGQ2NGp2NDRfNTdjOXhueHJmcA&hl=en
+
+
 * * * INSTALL SCALA * * *
 
 This program is written in Scala so you need that installed. You
